[gd_scene load_steps=3 format=3 uid="uid://1ooot67jckx7"]

[ext_resource type="Script" path="res://Scripts/Dialogue/dialogue_area.gd" id="1_fwvya"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pchxe"]
radius = 20.0

[node name="DialogueArea" type="Area2D"]
collision_layer = 32768
collision_mask = 2
script = ExtResource("1_fwvya")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pchxe")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
